# poc_polars

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs
